@@ -2,6 +2,7 @@
 v4.2.0-git
 ----------
 
+[jan] Add recurrence controls to basic view (Request #11545).
 [mjr] Add API support for multiple tasklists via ActiveSync.
 
 
